--- a/src/BddBundle/Resources/views/Profile/ratings.html.twig
+++ b/src/BddBundle/Resources/views/Profile/ratings.html.twig
@@ -9,34 +9,7 @@
 
 {% block javascripts %}
     <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
-    <script type="text/javascript">
-        $('document').ready(function () {
-            $('.rating-coaster').rateit(
-                {max: 5, step: 0.5, resetable: false, mode: 'font'}
-            ).bind('rated', function () {
-                var url = Routing.generate(
-                    'rating_edit',
-                    {'id': this.dataset.coaster, '_locale': '{{ app.request.locale }}'}
-                );
-
-                $.post(url, {value: $(this).rateit('value')}, function (response) {
-                }, 'JSON');
-            });
-        });
-
-        function deleteRating(id) {
-            var url = Routing.generate(
-                'rating_delete',
-                {'id': id, '_locale': '{{ app.request.locale }}'}
-            );
-            $.ajax({
-                url: url,
-                type: "DELETE",
-            }).done(function () {
-                $('tr#tr-coaster-'+id).remove();
-            });
-        }
-    </script>
+    <script src="{{ asset('js/pages/rating.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -83,7 +56,7 @@
                             {{ rating.updatedAt|date("d/m/Y") }}
                         </td>
                         <td class="text-center hidden-xs">
-                            <a onclick="deleteRating({{ rating.coaster.id }});"><i class="icon-trash"></i></a>
+                            <a onclick="deleteRating({{ rating.coaster.id }}, $(this).closest('tr'));"><i class="icon-trash"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
