--- a/src/BddBundle/Resources/views/Review/form.html.twig
+++ b/src/BddBundle/Resources/views/Review/form.html.twig
@@ -7,7 +7,7 @@
     <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
     <script type="text/javascript">
         $('document').ready(function () {
-            $('#rateit-coaster').rateit(
+            $('.rating-coaster').rateit(
                 {max: 5, step: 0.5, backingfld: '#review_value', resetable: false, mode: 'font'}
             );
         });
@@ -39,7 +39,7 @@
                 <span class="text-danger">*</span>
                 <br>
                 {{ form_widget(form.value) }}
-                <div id="rateit-coaster" style="font-size: 30px;"></div>
+                <div class="rating-coaster" data-rateit-backingfld="#review_value" style="font-size: 22px;"></div>
             </div>
 
             <div class="form-group">
