add terms of use

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -36,8 +36,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://forum.coastersworld.fr/">
-                            <i class="icon-bubble2"></i> <span>{{ 'sidebar.forum'|trans }}</span>
+                        <a href="{{ path('default_terms') }}">
+                            <i class="icon-info22"></i> <span>{{ 'sidebar.terms'|trans }}</span>
                         </a>
                     </li>
                     <li>
