moving terms of use to footer

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,4 +1,5 @@
 <div class="footer text-muted">
     &copy; {{ 'now'|date('Y') }}.
     Made with <i class="icon-heart6"></i> by Captain Coaster.
+    <a href="{{ path('default_terms') }}">{{ 'footer.terms'|trans }}</a>
 </div>
