--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -79,12 +79,24 @@
                     </a>
 
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="{{ path('me') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
+                        <li>
+                            <a href="{{ path('me') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
                         </li>
-                        <li><a href="{{ path('liste_me') }}"><i
-                                        class="icon-podium"></i> {{ 'navbar.topcoasters'|trans }}</a></li>
-                        <li><a href="{{ path('me_ratings') }}"><i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
-                            </a></li>
+                        <li>
+                            <a href="{{ path('liste_me') }}">
+                                <i class="icon-podium"></i> {{ 'navbar.topcoasters'|trans }}
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('me_ratings') }}">
+                                <i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('map_user', {'id': app.user.id}) }}">
+                                <i class="icon-location3"></i> {{ 'navbar.rating'|trans }}
+                            </a>
+                        </li>
                         <li class="divider"></li>
                         <li><a href="{{ path('logout') }}"><i class="icon-switch2"></i> {{ 'navbar.logout'|trans }}</a>
                         </li>
