--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <a href="{{ path('map_user', {'id': app.user.id}) }}">
-                                <i class="icon-location3"></i> {{ 'navbar.rating'|trans }}
+                                <i class="icon-location3"></i> {{ 'navbar.my_map'|trans }}
                             </a>
                         </li>
                         <li class="divider"></li>
