--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -51,7 +51,7 @@
                 </div>
                 <div class="media-right text-center">
                     <h3 class="no-margin text-semibold text-nowrap">
-                        {{ coaster.score|number_format(1, ',') }}
+                        {{ coaster.score|number_format(1, ',') }}%
                     </h3>
                     <div class="text-muted">
                         {{ 'coaster_ranking.reviews_number'|transchoice(coaster.totalRatings) }}
