--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -18,7 +18,7 @@
                         <div class="media-body">
                             {% if coaster.score %}
                                 <h3 class="no-margin text-semibold text-indigo">
-                                    {{ coaster.score|number_format(1, ',') }}
+                                    {{ coaster.score|number_format(1, ',') }}%
                                 </h3>
                                 <span class="text-size-mini text-muted">
                                     {{ 'coaster.rating.text'|trans(
