rollback description coaster

--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -4,9 +4,9 @@
 {% set subTitle = coaster.park.name %}
 {% block title %}{{ title }} - {{ subTitle }}{% endblock %}
 
-{% block header %}
-    <meta name="description" content="{{ coaster.name }} is a {{ coaster.builtCoaster.manufacturer.name }} roller coaster"/>
-{% endblock %}
+{#{% block header %}#}
+    {#<meta name="description" content="{{ coaster.name }} is a {{ coaster.builtCoaster.manufacturer.name }} roller coaster"/>#}
+{#{% endblock %}#}
 
 {% block body %}
     <div class="row">
