add info for rankings

--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -9,12 +9,12 @@
 
 {% block body %}
     <!-- info alert -->
-    {#<div class="alert alert-info alert-styled-left alert-arrow-left alert-component">#}
-        {#<button type="button" class="close" data-dismiss="alert"><span>×</span><span class="sr-only">Close</span>#}
-        {#</button>#}
-        {#<h6 class="alert-heading text-semibold">{{ 'coaster_ranking.info.title'|trans }}</h6>#}
-        {#<p>{{ 'coaster_ranking.info.text'|trans}}</p>#}
-    {#</div>#}
+    <div class="alert alert-info alert-styled-left alert-arrow-left alert-component">
+        <button type="button" class="close" data-dismiss="alert"><span>×</span><span class="sr-only">Close</span>
+        </button>
+        <h6 class="alert-heading text-semibold">{{ 'coaster_ranking.info.title'|trans }}</h6>
+        <p>{{ 'coaster_ranking.info.text'|trans}}</p>
+    </div>
     <!-- /info alert -->
     <ul class="media-list content-group">
         {% for coaster in coasters %}
