add ranking service and command

--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -33,7 +33,7 @@
 
                 <div class="media-body">
                     <h2 class="media-heading">
-                        {{ coaster.ranking }}
+                        {{ coaster.rank }}
                         -
                         <a style="color:#333;"
                            href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">{{ coaster.name }}
