add list of reviews

--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -121,6 +121,9 @@
             <div class="panel panel-flat">
                 <div class="panel-heading">
                     <h6 class="panel-title text-semiold">{{ 'review.last'|trans }}</h6>
+                    <div class="heading-elements">
+                        <a href="{{ path('review_list') }}" class="heading-text">{{ 'review.all'|trans }}</a>
+                    </div>
                 </div>
 
                 <div class="panel-body">
