--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -31,6 +31,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{{ path('review_list') }}">
+                            <i class="icon-megaphone"></i> <span>{{ 'sidebar.review'|trans }}</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path('default_contact') }}">
                             <i class="icon-mail5"></i> <span>{{ 'sidebar.contact'|trans }}</span>
                         </a>
