--- a/src/BddBundle/Resources/views/Maps/index.html.twig
+++ b/src/BddBundle/Resources/views/Maps/index.html.twig
@@ -53,19 +53,17 @@
                     <div class="form-group">
                         <select class="form-control" name="filters[openingDate]" onchange="filterData();">
                             <option value="">{{ 'map_index.filter.openingDate'|trans }}</option>
-                            <option value="2018">2018</option>
-                            <option value="2017">2017</option>
-                            <option value="2016">2016</option>
-                            <option value="2015">2015</option>
+                            {% for i in 2018..1980 %}
+                                <option value="{{ i }}">{{ i }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
-                        <select class="form-control" name="filters[averageRating]" onchange="filterData();">
-                            <option value="">{{ 'map_index.filter.averageRating'|trans }}</option>
-                            <option value="1">{{ 'map_index.filter.atleast'|trans }} 1</option>
-                            <option value="2">{{ 'map_index.filter.atleast'|trans }} 2</option>
-                            <option value="3">{{ 'map_index.filter.atleast'|trans }} 3</option>
-                            <option value="4">{{ 'map_index.filter.atleast'|trans }} 4</option>
+                        <select class="form-control" name="filters[score]" onchange="filterData();">
+                            <option value="">{{ 'map_index.filter.score'|trans }}</option>
+                            {% for i in range(10, 90, 10) %}
+                                <option value="{{ i }}">{{ 'map_index.filter.atleast'|transchoice(i) }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                 </div>
