--- a/src/BddBundle/Resources/views/User/list.html.twig
+++ b/src/BddBundle/Resources/views/User/list.html.twig
@@ -4,47 +4,51 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-    <!-- info alert -->
+    {# info alert #}
     <div class="alert alert-info alert-styled-left alert-arrow-left alert-component">
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span><span class="sr-only">Close</span>
         </button>
         <h6 class="alert-heading text-semibold">{{ 'user_list.info.title'|trans }}</h6>
         <p>{{ 'user_list.info.text'|trans }}</p>
     </div>
-    <!-- /info alert -->
-    <ul class="media-list content-group">
-        {% for user in users %}
-            <div class="col-lg-4 col-sm-6">
-                <div class="panel panel-body">
-                    <div class="media">
-                        <div class="media-left">
-                            {% if user.0.profilePicture %}
-                                <img src="{{ user.0.profilePicture }}" style="width: 70px; height: 70px;"
-                                     class="img-circle img-md" alt="{{ user.0.displayName }}">
-                            {% else %}
-                                <img src="{{ asset('images/default_user.png') }}" style="width: 70px; height: 70px;"
-                                     class="img-circle img-md" alt="{{ user.0.displayName }}">
-                            {% endif %}
-                        </div>
-                        <div class="media-body">
-                            <h6 class="media-heading">
-                                <a href="{{ path('user_profile', {'id': user.0.id}) }}">
-                                    {{ user.0.displayName }}
-                                </a>
-                            </h6>
-                            <p class="text-muted">
-                                {{ 'user_list.member_from'|trans }} {{ user.0.createdAt|date("d/m/Y") }}
-                            </p>
+    {# /info alert #}
+    <div class="row">
+        <ul class="media-list content-group">
+            {% for user in users %}
+                <div class="col-lg-4 col-sm-6">
+                    <div class="panel panel-body">
+                        <div class="media">
+                            <div class="media-left">
+                                {% if user.0.profilePicture %}
+                                    <img src="{{ user.0.profilePicture }}" style="width: 70px; height: 70px;"
+                                         class="img-circle img-md" alt="{{ user.0.displayName }}">
+                                {% else %}
+                                    <img src="{{ asset('images/default_user.png') }}" style="width: 70px; height: 70px;"
+                                         class="img-circle img-md" alt="{{ user.0.displayName }}">
+                                {% endif %}
+                            </div>
+                            <div class="media-body">
+                                <h6 class="media-heading">
+                                    <a href="{{ path('user_profile', {'id': user.0.id}) }}">
+                                        {{ user.0.displayName }}
+                                    </a>
+                                </h6>
+                                <p class="text-muted">
+                                    {{ 'user_list.member_from'|trans }} {{ user.0.createdAt|date("d/m/Y") }}
+                                </p>
 
-                            <h5 class="text-semibold no-margin">
-                                <a href="{{ path('user_ratings', {'id': user.0.id}) }}">
-                                    {{ 'user_list.rating'|transchoice(user.total_ratings) }}
-                                </a>
-                            </h5>
+                                <h5 class="text-semibold no-margin">
+                                    <a href="{{ path('user_ratings', {'id': user.0.id}) }}">
+                                        {{ 'user_list.rating'|transchoice(user.total_ratings) }}
+                                    </a>
+                                </h5>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-    </ul>
+            {% endfor %}
+        </ul>
+    </div>
+
+    {{ knp_pagination_render(users) }}
 {% endblock %}
