--- a/src/BddBundle/Resources/views/Maps/index.html.twig
+++ b/src/BddBundle/Resources/views/Maps/index.html.twig
@@ -36,6 +36,14 @@
                     <div class="form-group">
                         <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
                             <label class="display-block">
+                                {{ 'map_index.filter.kiddie'|trans }}
+                                <input name="filters[kiddie]" type="checkbox" class="switchery">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
+                            <label class="display-block">
                                 {{ 'map_index.filter.notridden'|trans }}
                                 <input name="filters[notridden]" type="checkbox" class="switchery"
                                        {% if not is_granted('ROLE_USER') %}disabled="disabled"{% endif %}>
