--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -49,14 +49,14 @@
 
                     </div>
                     <div class="col-xs-3">
-                        <p><i class="icon-spinner11 icon-2x display-inline-block text-success"></i></p>
+                        <p><i class="icon-megaphone icon-2x display-inline-block text-success"></i></p>
                         <h5 class="text-semibold no-margin">
                             <a href="{{ path('review_list') }}">{{ stats.nb_reviews }}</a>
                         </h5>
                         <span class="text-muted text-size-small">{{ 'index.stats.reviews'|trans }}</span>
                     </div>
                     <div class="col-xs-3">
-                        <p><i class="icon-rulers icon-2x display-inline-block text-warning"></i></p>
+                        <p><i class="icon-podium icon-2x display-inline-block text-warning"></i></p>
                         <h5 class="text-semibold no-margin">
                             <a href="{{ path('liste_list') }}">{{ stats.nb_listes }}</a>
                         </h5>
