--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -15,29 +15,28 @@
                 <!-- score -->
                 <div class="panel panel-body">
                     <div class="media no-margin">
-                        <div class="media-body">
-                            {% if coaster.score %}
-                                <h3 class="no-margin text-semibold text-indigo">
-                                    {{ coaster.score|number_format(1, ',') }}%
+                        {% if coaster.score %}
+                            {% set hue = coaster.score * 1.2 %}
+                            <div class="media-left">
+                                <i style="color: hsl({{ hue }},50%,50%)" class="icon-heart6 icon-3x"></i>
+                            </div>
+                            <div class="media-body text-right">
+                                <h3 class="no-margin text-semibold text-right" style="color: hsl({{ hue }},50%,50%)">
+                                    {{ 'coaster.score.scoreof'|trans }} {{ coaster.score|number_format(1, ',') }}%
                                 </h3>
-                                <span class="text-size-mini text-muted">
-                                    {{ 'coaster.rating.text'|trans(
-                                        {
-                                            '%count_rating%': coaster.totalRatings,
-                                            '%count_top%': coaster.listed|length
-                                        }
-                                    ) }}
+                                <a href="{{ path('coaster_ranking') }}" class="text-muted">
+                                    {{ 'coaster.score.ranked'|trans }}
+                                    <span class="badge badge-flat border-grey text-grey-600">#{{ coaster.rank }}</span>
+                                    {{ 'coaster.score.intheworld'|trans }}
+                                </a>
+                            </div>
+                        {% else %}
+                            <div class="media-body">
+                                <span class="text-size-small text-muted">
+                                    {{ 'coaster.rating.notenough'|trans }}
                                 </span>
-                            {% else %}
-                                <span class=" text-size-small text-muted">
-                                {{ 'coaster.rating.notenough'|trans }}
-                            </span>
-                            {% endif %}
-                        </div>
-
-                        <div class="media-right media-middle">
-                            <i class="icon-heart6 icon-3x text-danger-400"></i>
-                        </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- /score -->
