--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -124,7 +124,7 @@
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.status'|trans }}:</label>
                         <div class="pull-right">
-                            <span class="label label-{{ coaster.status.type }}">
+                            <span class="label label-{{ coaster.status.type }} bg-{{ coaster.status.type }}">
                                 {{ coaster.status.name|trans([], 'database') }}
                             </span>
                         </div>
