--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -11,6 +11,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{{ path('search_index') }}">
+                            <i class="icon-search4"></i> <span>{{ 'sidebar.search'|trans }}</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path('coaster_ranking') }}">
                             <i class="icon-trophy2"></i> <span>{{ 'sidebar.coastersRanking'|trans }}</span>
                         </a>
