--- a/src/BddBundle/Resources/views/Search/index.html.twig
+++ b/src/BddBundle/Resources/views/Search/index.html.twig
@@ -36,6 +36,7 @@
                                 <label class="display-block">
                                     {{ 'map_index.filter.notridden'|trans }}
                                     <input name="filters[notridden]" type="checkbox" class="switchery"
+                                           onchange="filterData();"
                                            {% if not is_granted('ROLE_USER') %}disabled="disabled"{% endif %}>
                                 </label>
                             </div>
@@ -69,6 +70,7 @@
                 ajaxPager();
             });
         }
+
         // at loading
         filterData();
 
